<resources>
    <string name="app_name">Ticketapplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="sports_tickets">Sports Tickets</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="_37243268_petroc_ac_uk">37243268@petroc.ac.uk</string>
    <string name="ticketManager">Ticket Manager</string>
    <string name="_00_00_00_00">00:00 - 00:00</string>
    <string name="ticket_available">Ticket Available</string>
    <string name="sporting_events">Sporting Events</string>
    <string name="my_tickets">My Tickets</string>
    <string name="make_order">Make Order</string>
    <string name="_240">£240</string>
    <string name="total">Total</string>
    <string name="exe_watersports_association_62_haven_road_exeter_devon_ex2_8dp">Exe Watersports Association 62 Haven Road Exeter Devon EX2 8DP</string>
    <string name="find_us">Find us</string>
    <string name="more_info_at_https_exewatersports_org_about">More info at https://exewatersports.org/about/</string>
    <string name="the_exe_water_sports_association_provides_facilities_to_578_members_across_four_clubs_whose_membership_reside_in_and_around_the_city_of_exeter">The Exe Water Sports Association provides facilities to 578 members across four clubs whose membership reside in and around the city of Exeter.</string>
    <string name="about_us">About us</string>
</resources>