<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ticketapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tickets"
        android:name="com.example.ticketapplication.ui.gallery.TicketsFragment"
        android:label="@string/menu_tickets"
        tools:layout="@layout/fragment_tickets" />

    <fragment
        android:id="@+id/nav_aboutUs"
        android:name="com.example.ticketapplication.ui.slideshow.AboutUsFragment"
        android:label="@string/menu_aboutUs"
        tools:layout="@layout/fragment_aboutus" />
</navigation>