<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/WelcomeImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/track_and_field_g9c641746d_1920"
        android:scaleType="centerCrop"
        android:foreground="@drawable/foreground_gradient"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:fontFamily="monospace"
        android:text="@string/sports_tickets"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/WelcomeImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/WelcomeImageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="A place to order all your sporting tickets"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:fontFamily="monospace"/>

    <Button
        android:id="@+id/btnRegister"
        android:onClick="register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintWidth_percent=".8"
        android:background="@drawable/btn_round"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"/>




</androidx.constraintlayout.widget.ConstraintLayout>